[build-system]
build-backend = "setuptools.build_meta"

# This is the first version of setuptools that supports editable installation
# without a setup.py file.
requires = [ "setuptools>=64" ]

[project]
name = "colander-tools"
version = "0.13.0"
description = "Extensions to `colander`, particularly useful as part of REST API validation."
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
    { name = "Platform.sh", email = "sayhello@platform.sh" },
]
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "colander>=2,<3",
    "netaddr",
    "pytz",
    "six",
]

urls.source = "https://github.com/platformsh/colander-tools"

[tool.pyproject-fmt]
indent = 4

[dependency-groups]
dev = [
    "ruff~=0.11.5",
]
